# test_app_vk

./: .env_example  .gitignore  Dockerfile  README.md  api.py  pyproject.toml  requirements.txt
config/: settings.py
vk_app/: exceptions.py  schemas.py  status.py  utils.py  view.py
